--- a/index.css
+++ b/index.css
@@ -121,3 +121,27 @@ span{
     cursor: pointer;
     background-color: #eaf4ff;  
 }
+@media screen and (max-width:992px){
+    .main-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 50%;
+    }
+    .box:nth-of-type(1){
+        border-bottom-left-radius: 0px;
+        border-top-right-radius: 15px;
+        margin-bottom: 10px;
+    }
+    .box:nth-of-type(2){
+        margin-bottom: 10px;
+    }
+    .box:nth-of-type(3){
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 15px;
+        margin-bottom: 10px;
+    }
+
+   
+}
